--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
